--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #DB
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendgn?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://bglpwq9ifvfxiscijpxw-mysql.services.clever-cloud.com/bglpwq9ifvfxiscijpxw?useSSL=false&serverTimezone=UTC
+spring.datasource.username=uddv9gpienbxzypf
+spring.datasource.password=ub58rPVKDILzLSJiYjKD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
